# MediaCat

./: .gitignore  .yamllint.yaml  CLAUDE.md  MediaCat_Installation_Guide.md  MediaCat_Technical_Reference.docx  MediaCat_Technical_Reference.md  README.md
Change Proposals/: Proposal to add graphical symbosl to the runout - WAX string of the SoundDB.docx
mediacat/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .trivy.yaml  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
mediacat/alembic/: env.py
mediacat/alembic/versions/: 0001_initial_schema.py  0002_symbols.py  0003_matrix_parsed.py  0004_media_primary_cover.py
mediacat/config/: app.example.yaml  connectors.example.yaml  logging.yaml
mediacat/deploy/: Caddyfile  Dockerfile  docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.yaml
mediacat/deploy/initdb/: 01-roles.sql
mediacat/deploy/opa/bundles/mediacat/: barcode.rego  data.json  main.rego  main_test.rego
mediacat/deploy/scripts/: backup.sh  ollama-pull.sh
mediacat/docs/: DUE_DILIGENCE_REPORT.md  architecture.md  index.md  mkdocs.yml
mediacat/docs/adr/: 0001-media-scope.md  0002-hybrid-ai.md  0003-rule-engine.md  0004-data-code-separation.md  0005-web-stack.md
mediacat/docs/runbooks/: index.md
mediacat/docs/sections/: 01-bootstrap.md  02-docker-stack.md  03-database.md  04-storage.md  05-ingestion.md  06-rules.md  07-llm.md  08-vision.md  09-web.md  10-security.md
mediacat/scripts/: data-init.sh  dev-down.sh  dev-up.sh  mediacat-ctl.md  mediacat-ctl.sh  secrets-init.sh  ubuntu-bootstrap.sh  wsl2-prepare.ps1
mediacat/src/mediacat/: __init__.py  config.py  logging_filters.py  worker.py
mediacat/src/mediacat/db/: __init__.py  audit.py  base.py  engine.py  enums.py  models.py  symbol_helpers.py
mediacat/src/mediacat/ingestion/: __init__.py  base.py  discogs.py  drift.py  musicbrainz.py  queue.py  registry.py
mediacat/src/mediacat/llm/: __init__.py  adapter.py  api.py  ollama.py  safety.py  tasks.py
mediacat/src/mediacat/rules/: __init__.py  engine.py  local.py  opa.py
mediacat/src/mediacat/storage/: __init__.py  object_store.py  ocr.py  pipeline.py  translation.py
mediacat/src/mediacat/vision/: __init__.py  adapter.py  candidates.py  prompts.py
mediacat/src/mediacat/web/: __init__.py  app.py  auth.py  catalogue.py  middleware.py  routes.py
mediacat/src/mediacat/web/static/: forms.js  htmx.min.js  pressing.js  style.css  theme.js
mediacat/src/mediacat/web/templates/: base.html  catalogue.html  dashboard.html  import_discogs.html  login.html  merge.html  pressing_detail.html  review_detail.html  reviews.html  token_detail.html  token_edit.html  tokens.html  user_form.html  users.html
mediacat/src/mediacat/web/templates/partials/: album_list.html  merge_search.html  pressing_list.html  review_list.html  search_results.html  token_list.html
mediacat/tests/: test_ingestion.py  test_llm.py  test_logging_filters.py  test_models.py  test_rules.py  test_storage.py  test_vision.py  test_web.py
ref_images/: list.txt
tools/: gen_docs.py
